--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <body>
   <div class="wrapper">
     <!-- Хедер -->
-    <img src="" alt="">
     <header class="header">
       <a href="" class="logo">
         <img src="" alt="logo__img">
@@ -37,101 +36,99 @@
     <!-- Контент страницы -->
     <div class="page">
       <div class="page__body">
-        <div class="background-hero">
-          <img src="" alt="" class="background-hero__img">
-          <div class="text">
-            <h1 class="text__title">снимем для вас креативное видео</h1>
-            <div class="text__description">Креативный видеопродакшн полного цикла</div>
-            <a href="" class="text__link">
-              <button class="text__button">Подробнее</button>
-            </a>
-          </div>
-          <div class="offer">
-            <ul class="offer__list">
-              <li class="offer__section">
-                <img src="" alt="" class="offer__icon">
-                <h3 class="offer__title">Реклама</h3>
-                <div class="offer__man">От <b>5</b> человек на проект</div>
-                <div class="offer__days"><b>28</b> дней работы в среднем</div>
-                <div class="offer_description">Креатив и производство рекламы, документального и корпоративного
-                  контента.</div>
-                <a href="" class="offer__link">
-                  <button class="offer_button">Подробнее</button>
-                </a>
-              </li>
-              <li class="offer__section">
-                <img src="" alt="" class="offer__icon">
-                <h3 class="offer__title">Видео-клип</h3>
-                <div class="offer__man">От <b>7</b> человек на проект</div>
-                <div class="offer__days"><b>21</b> дней работы в среднем</div>
-                <div class="offer_description">Вы решили представиться своим слушателям, пополнить свой творческий багаж
-                  качественным видео? Прекрасно!</div>
-                <a href="" class="offer__link">
-                  <button class="offer_button">Подробнее</button>
-                </a>
-              </li>
-              <li class="offer__section">
-                <img src="" alt="" class="offer__icon">
-                <h3 class="offer__title">Свадьба</h3>
-                <div class="offer__man">От <b>2</b> человек на проект</div>
-                <div class="offer__days"><b>30</b> дней работы в среднем</div>
-                <div class="offer_description">Получите живое видео своего самого счастливого дня, которое Вы будете
-                  пересматривать снова и снова.</div>
-                <a href="" class="offer__link">
-                  <button class="offer_button">Подробнее</button>
-                </a>
-              </li>
-            </ul>
-          </div>
+        <div class="promo">
+          <h1 class="promo__title">снимем для вас креативное видео</h1>
+          <div class="promo__description">Креативный видеопродакшн полного цикла</div>
+          <a href="" class="body__link">
+            <button class="body__button">Подробнее</button>
+          </a>
         </div>
-        <div class="background-bottom">
-          <img src="" alt="" class="background-bottom__img">
-          <div class="news">
-            <h2 class="news__title">Новости и акции</h2>
-            <ul class="news__list">
-              <li class="news__item">
-                <a href="" class="news__link">
-                  <img src="" alt="" class="news__img">
+        <div class="offer">
+          <ul class="offer__list">
+            <li class="offer__section">
+              <img src="" alt="" class="offer__icon">
+              <h3 class="offer__title">Реклама</h3>
+              <div class="offer__man">От <b>5</b> человек на проект</div>
+              <div class="offer__man"><b>28</b> дней работы в среднем</div>
+              <div class="offer__description">Креатив и производство рекламы, документального и корпоративного
+                контента.</div>
+              <a href="" class="body__link">
+                <button class="body__button">Подробнее</button>
+              </a>
+            </li>
+            <li class="offer__section">
+              <img src="" alt="" class="offer__icon">
+              <h3 class="offer__title">Видео-клип</h3>
+              <div class="offer__man">От <b>7</b> человек на проект</div>
+              <div class="offer__man"><b>21</b> дней работы в среднем</div>
+              <div class="offer__description">Вы решили представиться своим слушателям, пополнить свой творческий багаж
+                качественным видео? Прекрасно!</div>
+              <a href="" class="body__link">
+                <button class="body__button">Подробнее</button>
+              </a>
+            </li>
+            <li class="offer__section">
+              <img src="" alt="" class="offer__icon">
+              <h3 class="offer__title">Свадьба</h3>
+              <div class="offer__man">От <b>2</b> человек на проект</div>
+              <div class="offer__man"><b>30</b> дней работы в среднем</div>
+              <div class="offer__description">Получите живое видео своего самого счастливого дня, которое Вы будете
+                пересматривать снова и снова.</div>
+              <a href="" class="body__link">
+                <button class="body__button">Подробнее</button>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="news">
+          <h2 class="news__title">Новости и акции</h2>
+          <ul class="news__list">
+            <li class="news__item">
+              <a href="" class="news__link">
+                <img src="" alt="" class="news__img">
+                <div class="news__text">
                   <div class="news__date">Декабрь 2019</div>
                   <h3 class="news__subtitle">Снимем ваш клип на 50% дешевле</h3>
                   <div class="news__description">В честь Новогодних праздников мы раздаем огромные скидки, успейте
                     забронировать даты.</div>
-                </a>
-              </li>
-              <li class="news__item">
-                <a href="" class="news__link">
-                  <img src="" alt="" class="news__img">
+                </div>
+              </a>
+            </li>
+            <li class="news__item">
+              <a href="" class="news__link">
+                <img src="" alt="" class="news__img">
+                <div class="news__text">
                   <div class="news__date">Декабрь 2019</div>
                   <h3 class="news__subtitle">Акция для молодоженов 30%</h3>
                   <div class="news__description">Успевайте забронировать даты. Пока еще есть места на декабрь. Удачи и
                     всех благ!</div>
-                </a>
-              </li>
-            </ul>
-            <div class="paginator">
-              <div class="paginator__description">Страница 1 из 7</div>
-              <ul class="paginator__list">
-                <li class="paginator__item">1</li>
-                <li class="paginator__item">2</li>
-                <li class="paginator__item">3</li>
-                <li class="paginator__item">4</li>
-                <li class="paginator__item">5</li>
-                <li class="paginator__item">6</li>
-                <li class="paginator__item">7</li>
-              </ul>
-            </div>
-          </div>
-          <div class="about">
-            <img src="" alt="" class="about__img">
-            <div class="about__main">
-              <h2 class="about__title">О нас</h2>
-              <div class="about__description">Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать
-                несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить
-                навык публичных выступлений в домашних условиях.</div>
-              <a href="" class="about__link">
-                <button class="about__button">Подробнее</button>
+                </div>
               </a>
-            </div>
+            </li>
+          </ul>
+          <div class="paginator">
+            <div class="paginator__description">Страница 1 из 7</div>
+            <ul class="paginator__list">
+              <li class="paginator__item"><a href="" class="paginator__link">1</a></li>
+              <li class="paginator__item"><a href="" class="paginator__link">2</a></li>
+              <li class="paginator__item"><a href="" class="paginator__link">3</a></li>
+              <li class="paginator__item"><a href="" class="paginator__link">4</a></li>
+              <li class="paginator__item"><a href="" class="paginator__link">5</a></li>
+              <li class="paginator__item"><a href="" class="paginator__link">6</a></li>
+              <li class="paginator__item"><a href="" class="paginator__link">7</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="about">
+          <img src="" alt="" class="about__img">
+          <div class="about__main">
+            <h2 class="about__title">О нас</h2>
+            <div class="about__description">Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать
+              несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить
+              навык публичных выступлений в домашних условиях.</div>
+            <a href="" class="body__link">
+              <button class="body__button">Подробнее</button>
+            </a>
           </div>
         </div>
       </div>
@@ -157,22 +154,22 @@
       <div class="socials">
         <ul class="socials__list">
           <li class="socials__item">
-            <a href="" class="link__socials">
+            <a href="" class="socials__link">
               <img src="" alt="" class="socials__img">
             </a>
           </li>
           <li class="socials__item">
-            <a href="" class="link__socials">
+            <a href="" class="socials__link">
               <img src="" alt="" class="socials__img">
             </a>
           </li>
           <li class="socials__item">
-            <a href="" class="link__socials">
+            <a href="" class="socials__links">
               <img src="" alt="" class="socials__img">
             </a>
           </li>
           <li class="socials__item">
-            <a href="" class="link__socials">
+            <a href="" class="socials__link">
               <img src="" alt="" class="socials__img">
             </a>
           </li>
