--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Video Production</title>
+  <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
@@ -35,99 +36,113 @@
     </header>
     <!-- Контент страницы -->
     <div class="page">
-      <div class="page__body">
-        <div class="promo">
-          <h1 class="promo__title">снимем для вас креативное видео</h1>
-          <div class="promo__description">Креативный видеопродакшн полного цикла</div>
-          <a href="" class="body__link">
-            <button class="body__button">Подробнее</button>
+      <div class="promo">
+        <h1 class="promo__title">снимем для вас креативное видео</h1>
+        <div class="promo__description">Креативный видеопродакшн полного цикла</div>
+        <div class="button">
+          <a href="" class="button__link">
+            <button class="button__body">Подробнее</button>
           </a>
         </div>
-        <div class="offer">
-          <ul class="offer__list">
-            <li class="offer__section">
-              <img src="" alt="" class="offer__icon">
-              <h3 class="offer__title">Реклама</h3>
+      </div>
+      <div class="offer">
+        <ul class="offer__list">
+          <li class="offer__section">
+            <img src="" alt="" class="offer__icon">
+            <h3 class="offer__title">Реклама</h3>
+            <div class="offer__param">
               <div class="offer__man">От <b>5</b> человек на проект</div>
               <div class="offer__man"><b>28</b> дней работы в среднем</div>
-              <div class="offer__description">Креатив и производство рекламы, документального и корпоративного
-                контента.</div>
-              <a href="" class="body__link">
-                <button class="body__button">Подробнее</button>
+            </div>
+            <div class="offer__description">Креатив и производство рекламы, документального и корпоративного
+              контента.</div>
+            <div class="button">
+              <a href="" class="button__link">
+                <button class="button__body">Подробнее</button>
               </a>
-            </li>
-            <li class="offer__section">
-              <img src="" alt="" class="offer__icon">
-              <h3 class="offer__title">Видео-клип</h3>
+            </div>
+          </li>
+          <li class="offer__section">
+            <img src="" alt="" class="offer__icon">
+            <h3 class="offer__title">Видео-клип</h3>
+            <div class="offer__param">
               <div class="offer__man">От <b>7</b> человек на проект</div>
               <div class="offer__man"><b>21</b> дней работы в среднем</div>
-              <div class="offer__description">Вы решили представиться своим слушателям, пополнить свой творческий багаж
-                качественным видео? Прекрасно!</div>
-              <a href="" class="body__link">
-                <button class="body__button">Подробнее</button>
+            </div>
+            <div class="offer__description">Вы решили представиться своим слушателям, пополнить свой творческий багаж
+              качественным видео? Прекрасно!</div>
+            <div class="button">
+              <a href="" class="button__link">
+                <button class="button__body">Подробнее</button>
               </a>
-            </li>
-            <li class="offer__section">
-              <img src="" alt="" class="offer__icon">
-              <h3 class="offer__title">Свадьба</h3>
+            </div>
+          </li>
+          <li class="offer__section">
+            <img src="" alt="" class="offer__icon">
+            <h3 class="offer__title">Свадьба</h3>
+            <div class="offer__param">
               <div class="offer__man">От <b>2</b> человек на проект</div>
               <div class="offer__man"><b>30</b> дней работы в среднем</div>
-              <div class="offer__description">Получите живое видео своего самого счастливого дня, которое Вы будете
-                пересматривать снова и снова.</div>
-              <a href="" class="body__link">
-                <button class="body__button">Подробнее</button>
+            </div>
+            <div class="offer__description">Получите живое видео своего самого счастливого дня, которое Вы будете
+              пересматривать снова и снова.</div>
+            <div class="button">
+              <a href="" class="button__link">
+                <button class="button__body">Подробнее</button>
               </a>
-            </li>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <div class="news">
+        <h2 class="news__title">Новости и акции</h2>
+        <ul class="news__list">
+          <li class="news__item">
+            <a href="" class="news__link">
+              <img src="" alt="" class="news__img">
+              <div class="news__text">
+                <div class="news__date">Декабрь 2019</div>
+                <h3 class="news__subtitle">Снимем ваш клип на 50% дешевле</h3>
+                <div class="news__description">В честь Новогодних праздников мы раздаем огромные скидки, успейте
+                  забронировать даты.</div>
+              </div>
+            </a>
+          </li>
+          <li class="news__item">
+            <a href="" class="news__link">
+              <img src="" alt="" class="news__img">
+              <div class="news__text">
+                <div class="news__date">Декабрь 2019</div>
+                <h3 class="news__subtitle">Акция для молодоженов 30%</h3>
+                <div class="news__description">Успевайте забронировать даты. Пока еще есть места на декабрь. Удачи и
+                  всех благ!</div>
+              </div>
+            </a>
+          </li>
+        </ul>
+        <div class="paginator">
+          <div class="paginator__description">Страница 1 из 7</div>
+          <ul class="paginator__list">
+            <li class="paginator__item"><a href="" class="paginator__link">1</a></li>
+            <li class="paginator__item"><a href="" class="paginator__link">2</a></li>
+            <li class="paginator__item"><a href="" class="paginator__link">3</a></li>
+            <li class="paginator__item"><a href="" class="paginator__link">4</a></li>
+            <li class="paginator__item"><a href="" class="paginator__link">5</a></li>
+            <li class="paginator__item"><a href="" class="paginator__link">6</a></li>
+            <li class="paginator__item"><a href="" class="paginator__link">7</a></li>
           </ul>
         </div>
-        <div class="news">
-          <h2 class="news__title">Новости и акции</h2>
-          <ul class="news__list">
-            <li class="news__item">
-              <a href="" class="news__link">
-                <img src="" alt="" class="news__img">
-                <div class="news__text">
-                  <div class="news__date">Декабрь 2019</div>
-                  <h3 class="news__subtitle">Снимем ваш клип на 50% дешевле</h3>
-                  <div class="news__description">В честь Новогодних праздников мы раздаем огромные скидки, успейте
-                    забронировать даты.</div>
-                </div>
-              </a>
-            </li>
-            <li class="news__item">
-              <a href="" class="news__link">
-                <img src="" alt="" class="news__img">
-                <div class="news__text">
-                  <div class="news__date">Декабрь 2019</div>
-                  <h3 class="news__subtitle">Акция для молодоженов 30%</h3>
-                  <div class="news__description">Успевайте забронировать даты. Пока еще есть места на декабрь. Удачи и
-                    всех благ!</div>
-                </div>
-              </a>
-            </li>
-          </ul>
-          <div class="paginator">
-            <div class="paginator__description">Страница 1 из 7</div>
-            <ul class="paginator__list">
-              <li class="paginator__item"><a href="" class="paginator__link">1</a></li>
-              <li class="paginator__item"><a href="" class="paginator__link">2</a></li>
-              <li class="paginator__item"><a href="" class="paginator__link">3</a></li>
-              <li class="paginator__item"><a href="" class="paginator__link">4</a></li>
-              <li class="paginator__item"><a href="" class="paginator__link">5</a></li>
-              <li class="paginator__item"><a href="" class="paginator__link">6</a></li>
-              <li class="paginator__item"><a href="" class="paginator__link">7</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="about">
-          <img src="" alt="" class="about__img">
-          <div class="about__main">
-            <h2 class="about__title">О нас</h2>
-            <div class="about__description">Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать
-              несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить
-              навык публичных выступлений в домашних условиях.</div>
-            <a href="" class="body__link">
-              <button class="body__button">Подробнее</button>
+      </div>
+      <div class="about">
+        <img src="" alt="" class="about__img">
+        <div class="about__main">
+          <h2 class="about__title">О нас</h2>
+          <div class="about__description">Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать
+            несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить
+            навык публичных выступлений в домашних условиях.</div>
+          <div class="button">
+            <a href="" class="button__link">
+              <button class="button__body">Подробнее</button>
             </a>
           </div>
         </div>
