--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <!-- Хедер -->
     <header class="header">
       <a href="" class="logo">
-        <img src="" alt="logo__img">
+        <img src="image/logo.png" alt="Video Production" class="logo__img">
       </a>
       <nav class="menu">
         <ul class="menu__list">
-          <li class="menu__item">
+          <li class="menu__item menu__item--active">
             <a href="" class="menu__title">Главная</a>
           </li>
           <li class="menu__item">
@@ -37,59 +37,51 @@
     <!-- Контент страницы -->
     <div class="page">
       <div class="promo">
-        <h1 class="promo__title">снимем для вас креативное видео</h1>
+        <h1 class="promo__title">Cнимем для вас креативное видео</h1>
         <div class="promo__description">Креативный видеопродакшн полного цикла</div>
-        <div class="button">
-          <a href="" class="button__link">
-            <button class="button__body">Подробнее</button>
-          </a>
+        <div class="promo__button">
+          <a href="" class="button__link button__link--color--orange">Подробнее</a>
         </div>
       </div>
       <div class="offer">
         <ul class="offer__list">
           <li class="offer__section">
-            <img src="" alt="" class="offer__icon">
+            <img src="image/tv.png" alt="TV" class="offer__icon offer__icon--size--error">
             <h3 class="offer__title">Реклама</h3>
             <div class="offer__param">
               <div class="offer__man">От <b>5</b> человек на проект</div>
-              <div class="offer__man"><b>28</b> дней работы в среднем</div>
+              <div class="offer__days"><b>28</b> дней работы в среднем</div>
             </div>
             <div class="offer__description">Креатив и производство рекламы, документального и корпоративного
               контента.</div>
-            <div class="button">
-              <a href="" class="button__link">
-                <button class="button__body">Подробнее</button>
-              </a>
+            <div class="offer__button">
+              <a href="" class="button__link button__link--color--none">Подробнее</a>
             </div>
           </li>
           <li class="offer__section">
-            <img src="" alt="" class="offer__icon">
+            <img src="image/clapper.png" alt="Clapper" class="offer__icon">
             <h3 class="offer__title">Видео-клип</h3>
             <div class="offer__param">
               <div class="offer__man">От <b>7</b> человек на проект</div>
-              <div class="offer__man"><b>21</b> дней работы в среднем</div>
+              <div class="offer__days"><b>21</b> дней работы в среднем</div>
             </div>
             <div class="offer__description">Вы решили представиться своим слушателям, пополнить свой творческий багаж
               качественным видео? Прекрасно!</div>
-            <div class="button">
-              <a href="" class="button__link">
-                <button class="button__body">Подробнее</button>
-              </a>
+            <div class="offer__button">
+              <a href="" class="button__link button__link--color--none">Подробнее</a>
             </div>
           </li>
           <li class="offer__section">
-            <img src="" alt="" class="offer__icon">
+            <img src="image/film.png" alt="Film" class="offer__icon">
             <h3 class="offer__title">Свадьба</h3>
             <div class="offer__param">
               <div class="offer__man">От <b>2</b> человек на проект</div>
-              <div class="offer__man"><b>30</b> дней работы в среднем</div>
+              <div class="offer__days"><b>30</b> дней работы в среднем</div>
             </div>
             <div class="offer__description">Получите живое видео своего самого счастливого дня, которое Вы будете
               пересматривать снова и снова.</div>
-            <div class="button">
-              <a href="" class="button__link">
-                <button class="button__body">Подробнее</button>
-              </a>
+            <div class="offer__button">
+              <a href="" class="button__link button__link--color--none">Подробнее</a>
             </div>
           </li>
         </ul>
@@ -99,9 +91,9 @@
         <ul class="news__list">
           <li class="news__item">
             <a href="" class="news__link">
-              <img src="" alt="" class="news__img">
+              <img src="image/camera.png" alt="Клип" class="news__img">
               <div class="news__text">
-                <div class="news__date">Декабрь 2019</div>
+                <time class="news__date">Декабрь 2019</time>
                 <h3 class="news__subtitle">Снимем ваш клип на 50% дешевле</h3>
                 <div class="news__description">В честь Новогодних праздников мы раздаем огромные скидки, успейте
                   забронировать даты.</div>
@@ -110,9 +102,9 @@
           </li>
           <li class="news__item">
             <a href="" class="news__link">
-              <img src="" alt="" class="news__img">
+              <img src="image/wedding.png" alt="Свадьба" class="news__img">
               <div class="news__text">
-                <div class="news__date">Декабрь 2019</div>
+                <time class="news__date">Декабрь 2019</time>
                 <h3 class="news__subtitle">Акция для молодоженов 30%</h3>
                 <div class="news__description">Успевайте забронировать даты. Пока еще есть места на декабрь. Удачи и
                   всех благ!</div>
@@ -123,7 +115,7 @@
         <div class="paginator">
           <div class="paginator__description">Страница 1 из 7</div>
           <ul class="paginator__list">
-            <li class="paginator__item"><a href="" class="paginator__link">1</a></li>
+            <li class="paginator__item paginator__item--active"><a href="" class="paginator__link">1</a></li>
             <li class="paginator__item"><a href="" class="paginator__link">2</a></li>
             <li class="paginator__item"><a href="" class="paginator__link">3</a></li>
             <li class="paginator__item"><a href="" class="paginator__link">4</a></li>
@@ -134,28 +126,30 @@
         </div>
       </div>
       <div class="about">
-        <img src="" alt="" class="about__img">
-        <div class="about__main">
+        <img src="image/cameraman.png" alt="Cameraman" class="about__img">
+        <div class="about__text">
           <h2 class="about__title">О нас</h2>
-          <div class="about__description">Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать
-            несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить
-            навык публичных выступлений в домашних условиях.</div>
+          <div class="about__description">
+            <p>
+              Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать
+              несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить
+              навык публичных выступлений в домашних условиях.
+            </p>
+          </div>
           <div class="button">
-            <a href="" class="button__link">
-              <button class="button__body">Подробнее</button>
-            </a>
+            <a href="" class="button__link button__link--color--orange button__link--size--smaller">Подробнее</a>
           </div>
         </div>
       </div>
     </div>
     <!-- Футер -->
     <footer class="footer">
-      <a href="" class="logo">
-        <img src="" alt="logo__img">
+      <a href="" class="logo logo--footer">
+        <img src="image/logo.png" alt="Video Production" class="logo__img">
       </a>
-      <nav class="menu">
+      <nav class="menu menu--footer">
         <ul class="menu__list">
-          <li class="menu__item">
+          <li class="menu__item menu__item--active">
             <a href="" class="menu__title">Главная</a>
           </li>
           <li class="menu__item">
@@ -168,29 +162,21 @@
       </nav>
       <div class="socials">
         <ul class="socials__list">
-          <li class="socials__item">
-            <a href="" class="socials__link">
-              <img src="" alt="" class="socials__img">
-            </a>
+          <li class="socials__item socials__item--icon--tg">
+            <a href="" class="socials__link"></a>
           </li>
-          <li class="socials__item">
-            <a href="" class="socials__link">
-              <img src="" alt="" class="socials__img">
-            </a>
+          <li class="socials__item socials__item--icon--vk">
+            <a href="" class="socials__link"></a>
           </li>
-          <li class="socials__item">
-            <a href="" class="socials__links">
-              <img src="" alt="" class="socials__img">
-            </a>
+          <li class="socials__item socials__item--icon--fb">
+            <a href="" class="socials__link"></a>
           </li>
-          <li class="socials__item">
-            <a href="" class="socials__link">
-              <img src="" alt="" class="socials__img">
-            </a>
+          <li class="socials__item socials__item--icon--inst">
+            <a href="" class="socials__link"></a>
           </li>
         </ul>
       </div>
-      <address class="contacts">
+      <address class="contacts contacts--footer">
         <div class="contacts__description">Бесплатный звонок по России</div>
         <a href="tel:+78007003030" class="contacts__telephone">8 800 700 30 30</a>
       </address>
