--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
       </div>
     </section>
     <!-- Контент страницы -->
-    <div class="page">
+    <main class="page">
       <section class="section">
-        <div class="container">
+        <div class="container promo-container">
           <div class="promo">
             <h1 class="promo__title">Cнимем для вас креативное видео</h1>
             <div class="promo__description">Креативный видеопродакшн полного цикла</div>
@@ -179,7 +179,7 @@
           </div>
         </div>
       </section>
-    </div>
+    </main>
     <!-- Футер -->
     <section class="section">
       <div class="container">
