--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__item menu__item--active">
-                <a href="" class="menu__title">Главная</a>
+                <a href="https://haiseneki.github.io/project/" class="menu__title">Главная</a>
               </li>
               <li class="menu__item">
-                <a href="" class="menu__title">Услуги</a>
+                <a href="https://haiseneki.github.io/project/services.html" class="menu__title">Услуги</a>
               </li>
               <li class="menu__item">
                 <a href="" class="menu__title">Отзывы</a>
@@ -190,10 +190,10 @@
           <nav class="menu menu--footer">
             <ul class="menu__list">
               <li class="menu__item menu__item--active">
-                <a href="" class="menu__title">Главная</a>
+                <a href="https://haiseneki.github.io/project/" class="menu__title">Главная</a>
               </li>
               <li class="menu__item">
-                <a href="" class="menu__title">Услуги</a>
+                <a href="https://haiseneki.github.io/project/services.html" class="menu__title">Услуги</a>
               </li>
               <li class="menu__item">
                 <a href="" class="menu__title">Отзывы</a>
