--- a/services.html
+++ b/services.html
@@ -117,7 +117,7 @@
           </div>
         </div>
       </section>
-      <section class="section">
+      <section class="section section--partners">
         <div class="container">
           <div class="partners">
             <h2 class="partners__title">Партнеры</h2>
