--- a/services.html
+++ b/services.html
@@ -169,7 +169,7 @@
     </main>
     <section class="section section--footer">
       <div class="container">
-        <footer class="footer service-footer">
+        <footer class="footer">
           <a href="" class="logo logo--footer">
             <img src="image/logo.png" alt="Video Production" class="logo__img">
           </a>
