--- a/index.html
+++ b/index.html
@@ -33,7 +33,13 @@
           </nav>
           <address class="contacts">
             <a href="tel:+78007003030" class="contacts__telephone">8 800 700 30 30</a>
-            <div class="contacts__schedule">График работы</div>
+            <div class="contacts__schedule">
+              <div class="contacts__hover">График работы</div>
+              <div class="contacts__dropdown-menu">
+                <div class="contacts__days">пн-вс: 09:00 - 20:00</div>
+                <div class="contacts__lunch">Обед: 14:00-14:30</div>
+              </div>
+            </div>
           </address>
         </header>
       </div>
