--- a/services.html
+++ b/services.html
@@ -27,13 +27,19 @@
                 <a href="https://haiseneki.github.io/project/services.html" class="menu__title">Услуги</a>
               </li>
               <li class="menu__item">
-                <a href="" class="menu__title">Отзывы</a>
+                <a href="https://haiseneki.github.io/project/reviews.html" class="menu__title">Отзывы</a>
               </li>
             </ul>
           </nav>
           <address class="contacts">
             <a href="tel:+78007003030" class="contacts__telephone">8 800 700 30 30</a>
-            <div class="contacts__schedule">График работы</div>
+            <div class="contacts__schedule">
+              <div class="contacts__hover">График работы</div>
+              <div class="contacts__dropdown-menu">
+                <div class="contacts__days">пн-вс: 09:00 - 20:00</div>
+                <div class="contacts__lunch">Обед: 14:00-14:30</div>
+              </div>
+            </div>
           </address>
         </header>
         <h1 class="top__title">Услуги</h1>
@@ -182,7 +188,7 @@
                 <a href="https://haiseneki.github.io/project/services.html" class="menu__title">Услуги</a>
               </li>
               <li class="menu__item">
-                <a href="" class="menu__title">Отзывы</a>
+                <a href="https://haiseneki.github.io/project/reviews.html" class="menu__title">Отзывы</a>
               </li>
             </ul>
           </nav>
