--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section class="section">
       <div class="container">
         <header class="header">
-          <a href="" class="logo">
+          <a href="https://haiseneki.github.io/project/" class="logo">
             <img src="image/logo.png" alt="Video Production" class="logo__img">
           </a>
           <nav class="menu">
@@ -190,7 +190,7 @@
     <section class="section">
       <div class="container">
         <footer class="footer">
-          <a href="" class="logo logo--footer">
+          <a href="https://haiseneki.github.io/project/" class="logo logo--footer">
             <img src="image/logo.png" alt="Video Production" class="logo__img">
           </a>
           <nav class="menu menu--footer">
