--- a/reviews.html
+++ b/reviews.html
@@ -15,7 +15,7 @@
       <div class="container top__container">
         <!-- Хедер -->
         <header class="header top__header">
-          <a href="" class="logo">
+          <a href="https://haiseneki.github.io/project/" class="logo">
             <img src="image/logo.png" alt="Video Production" class="logo__img">
           </a>
           <nav class="menu">
@@ -247,7 +247,7 @@
     <section class="section section--footer">
       <div class="container">
         <footer class="footer">
-          <a href="" class="logo logo--footer">
+          <a href="https://haiseneki.github.io/project/" class="logo logo--footer">
             <img src="image/logo.png" alt="Video Production" class="logo__img">
           </a>
           <nav class="menu menu--footer">
