--- a/welcome.html
+++ b/welcome.html
@@ -14,7 +14,7 @@
         <div class="welcome__rec">
           <div class="welcome__center">
             <div class="welcome__animation">
-              <a href="" class="welcome__logo">
+              <a href="https://haiseneki.github.io/project/" class="welcome__logo">
                 <img src="image/welcome-logo.png" alt="" class="logo__img">
               </a>
               <div class="welcome__button">
